# linktester

./: MANIFEST.in  README.md  TUTORIAL.md  requirements.txt  setup.cfg
linktester/: __init__.py  link.py  validation.py
scripts/: linktester_client.py
test/: client_result.json  ethtool-eth0-first.txt  ethtool-eth0-second.txt  test_link.py  test_validation.py
