[metadata]
name = linktester
version = 0.0.1
author = Jose Vicente Nunez Zuleta
Author-email = kodegeek.com@protonmail.com
License = Apache 2.0
Summary = Simple client that checks a network link for common errors
Home-page = https://github.com/josevnz/Iperf3

[options]
packages = inventories
setup_requires =
    setuptools>=60.5.0
    wheel>=0.37.1
    build>=0.7.0
    pip==22.0.4
install_requires =
    importlib; python_version == "3.9"
    rich
scripts =
    scripts/linktester_client.py