[metadata]
name = linktester
version = 0.0.1
author = Jose Vicente Nunez Zuleta
Author-email = kodegeek.com@protonmail.com
License = Apache 2.0
Summary = Simple client that checks a network link for common errors
Home-page = https://github.com/josevnz/Iperf3

[options]
packages = linktester
setup_requires =
    setuptools
    wheel
    build
    pip
install_requires =
    importlib; python_version == "3.9"
    rich
    iperf3
scripts =
    scripts/linktester_client.py