[metadata]
name = linktester
version = 0.0.3
author = Jose Vicente Nunez Zuleta
author-email = kodegeek.com@protonmail.com
license = Apache 2.0
summary = Simple client that checks a network link for common errors
home-page = https://github.com/josevnz/linktester
description = Script to check the quality of a network link between 2 servers
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = linktester
setup_requires =
    setuptools
    wheel
    build
    pip
    twine
install_requires =
    importlib; python_version == "3.9"
    rich
    iperf3
scripts =
    scripts/linktester_client.py